добавил обработку некоторых граничных ситуаций